--- a/index.html
+++ b/index.html
@@ -126,6 +126,19 @@
         </div>
     </section>
     <!-- Slider End -->
+    <!-- Notice & Youtube  start -->
+    <section class="notice-youtube">
+        <div class="notices">
+            <div class="notice">
+                <h5 class="notice-title">26th March Off Day</h5>
+                
+            </div>
+        </div>
+        <div class="youtube">
+            <iframe width="600" height="400" src="https://www.youtube.com/embed/3JCuzY7YjcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
+    <!-- Notice & Youtube  End -->
     
 
     <!-- Javascript Link -->
