--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li><a class="active" href="#">Home</a></li>
+                <li><a class="actived" href="#">Home</a></li>
                 <li><a href="#">Academic Programme</a>
                     <ul class="dropdown">
                         <li>
@@ -70,7 +70,6 @@
             </ul>
         </div>
         <div class="search-icon">
-            <span class="fas fa-times"></span>
         </div>
         <div class="cancel-icon">
             <span class="fas fa-times"></span>
