--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     
 
     <!-- Javascript Link -->
+    <script src="Js/index.js"></script>
     <script src="Js/header.js"></script>
 
 </body>
