--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Styles/footer.css">
     
     <title>USD | Home</title>
-    <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.jpg">
+    <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             <span class="fas fa-bars"></span>
         </div>
         <div class="logo">
-            <img src="Assets/Images/USD.jpg" alt="Loading...">
+            <img src="Assets/Images/USD.png" alt="Loading...">
         </div>
         <div class="nav-list">
             <ul>
