--- a/index.html
+++ b/index.html
@@ -147,7 +147,27 @@
 
     <!-- FOOTER Start -->
     <footer class="footer">
+        <div class="about">
+            <h3 class="footer-title">About Us</h3>
+            <p class="footer-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus quaerat praesentium sequi unde quas modi quia necessitatibus, cupiditate autem consectetur, accusamus ullam dolor provident? Quasi repellendus vitae laudantium distinctio ducimus fugiat beatae, tempore recusandae quod nostrum? Fugit impedit natus, adipisci cupiditate magni repellat nulla at fuga odit. Magni, quas.</p>
+            <ul>
+                <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href=""><i class="fas fa-phone"></i></a></li>
+                <li><a href=""><i class="fas fa-envelope"></i></a></li>
+            </ul>
+        </div>
 
+        <div class="quick-links">
+            <h3 class="footer-title">Quick Links</h3>
+            
+        </div>
+
+        <div class="contact">
+            <h3 class="footer-title">Contact Us</h3>
+            
+        </div>
     </footer>
     <!-- FOOTER End -->
 
