--- a/patners.html
+++ b/patners.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/patners.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Home</title>
@@ -77,73 +77,106 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Slider Start -->
-    <section class="slider">
-        <div class="slideshow">
+    <!-- Patner Section Start -->
+    <section class="patners-section">
+        <div class="patners-head">
+            <h3 class="patners-title">Our Offical Patners</h3>
 
-            <div class="slides fade">
-                <div class="slideNumber">1 / 5</div>
-                <img src="Assets/Images/Slider/pic3.jpg" style="width:100%">
-                <div class="caption">Caption Text</div>
+            <div class="patners">
+                <div class="patner">
+                    <img src="Assets/Images/Patners/unicef.png" alt="">
+                    <p class="patner-txt">Unicef</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/bkash.png" alt="">
+                    <p class="patner-txt">Bkash</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/nagad.png" alt="">
+                    <p class="patner-txt">Nagad</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/pran.jpg" alt="">
+                    <p class="patner-txt">Pran</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
+                    <p class="patner-txt">RFL</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
+                    <p class="patner-txt">Faver Castell</p>
+                </div>
             </div>
-
-            <div class="slides fade">
-                <div class="slideNumber">2 / 5</div>
-                <img src="Assets/Images/Slider/Pic2.jpg" style="width:100%">
-                <div class="caption">Caption Two</div>
-            </div>
-
-            <div class="slides fade">
-                <div class="slideNumber">3 / 5</div>
-                <img src="Assets/Images/Slider/pic.jpeg" style="width:100%">
-                <div class="caption">Caption Three</div>
-            </div>
-
-            <div class="slides fade">
-                <div class="slideNumber">4 / 5</div>
-                <img src="Assets/Images/Slider/pic4.jpg" style="width:100%">
-                <div class="caption">Caption Four</div>
-            </div>
-
-            <div class="slides fade">
-                <div class="slideNumber">5 / 5</div>
-                <img src="Assets/Images/Slider/pic5.jpeg" style="width:100%">
-                <div class="caption">Caption Five</div>
-            </div>
-
-            <a class="prev" onclick="plusSlides(-1)"><i class="fas fa-chevron-left"></i></a>
-            <a class="next" onclick="plusSlides(1)"><i class="fas fa-chevron-right"></i></a>
-
         </div>
-        <br>
 
-        <div style="text-align:center">
-            <span class="pointer" onclick="currentSlide(1)"></span>
-            <span class="pointer" onclick="currentSlide(2)"></span>
-            <span class="pointer" onclick="currentSlide(3)"></span>
-            <span class="pointer" onclick="currentSlide(4)"></span>
-            <span class="pointer" onclick="currentSlide(5)"></span>
+        <hr>
+
+        <div class="patners-head">
+            <h3 class="patners-title">Our Academic Patners</h3>
+
+            <div class="patners">
+                <div class="patner">
+                    <img src="Assets/Images/Patners/unicef.png" alt="">
+                    <p class="patner-txt">Unicef</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/bkash.png" alt="">
+                    <p class="patner-txt">Bkash</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/nagad.png" alt="">
+                    <p class="patner-txt">Nagad</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/pran.jpg" alt="">
+                    <p class="patner-txt">Pran</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
+                    <p class="patner-txt">RFL</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
+                    <p class="patner-txt">Faver Castell</p>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="patners-head">
+            <h3 class="patners-title">Our Co Patners</h3>
+
+            <div class="patners">
+                <div class="patner">
+                    <img src="Assets/Images/Patners/unicef.png" alt="">
+                    <p class="patner-txt">Unicef</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/bkash.png" alt="">
+                    <p class="patner-txt">Bkash</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/nagad.png" alt="">
+                    <p class="patner-txt">Nagad</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/pran.jpg" alt="">
+                    <p class="patner-txt">Pran</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
+                    <p class="patner-txt">RFL</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
+                    <p class="patner-txt">Faver Castell</p>
+                </div>
+            </div>
         </div>
     </section>
-    <!-- Slider End -->
-    <!-- Notice & Youtube  start -->
-    <!-- <section class="notice-youtube">
-        <div class="notices">
-            <div class="notice">
-                <a class="notice-title">26th March Off Day</a>
-                <div class="date-time">
-                    <h3>26th</h3>
-                    <h3>March</h3>
-                    <h3>2023</h3>
-                </div>
-                
-            </div>
-        </div>
-        <div class="youtube">
-            <iframe class="youtube-video" src="https://www.youtube.com/embed/3JCuzY7YjcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </section> -->
-    <!-- Notice & Youtube  End -->
+    <!-- Patner Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
@@ -191,7 +224,6 @@
 
 
     <!-- Javascript Link -->
-    <script src="Js/index.js"></script>
     <script src="Js/header.js"></script>
 
 </body>
