--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-list">
             <ul>
-                <li><a class="actived" href="#">Home</a></li>
+                <li><a class="actived" href="index.html">Home</a></li>
                 <li><a href="#">Academic Programme</a>
                     <ul class="dropdown">
                         <li>
