--- a/index.html
+++ b/index.html
@@ -33,40 +33,40 @@
                         <li>
                             <h5 class="main-child">Postgrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="#">PhD</a></li>
-                                <li><a href="#">Masters</a></li>
+                                <li><a href="PhD.html">PhD</a></li>
+                                <li><a href="masters.html">Masters</a></li>
                             </ul>
                         </li>
                         <li>
                             <h5 class="main-child">Undergrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="#">Bechelors</a></li>
+                                <li><a href="bechelors.html">Bechelors</a></li>
                             </ul>
                         </li>
                         <li>
                             <h5 class="main-child">Specialized</h5>
                             <ul class="dropdownb">
-                                <li><a href="#">Diploma</a></li>
-                                <li><a href="#">Short Course</a></li>
-                                <li><a href="#">Workshop</a></li>
-                                <li><a href="#">Traning</a></li>
+                                <li><a href="diploma.html">Diploma</a></li>
+                                <li><a href="shortcourse.html">Short Course</a></li>
+                                <li><a href="workshop.html">Workshop</a></li>
+                                <li><a href="traning.html">Traning</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
                 <li><a href="patners.html">Patners</a></li>
-                <li><a href="#">Activities</a></li>
+                <li><a href="activities.html">Activities</a></li>
                 <li><a href="#">About</a>
                     <ul class="dropdown">
-                        <li><a href="#">Story</a></li>
-                        <li><a href="#">Vision</a></li>
-                        <li><a href="#">Mission</a></li>
-                        <li><a href="#">Team</a></li>
+                        <li><a href="story.html">Story</a></li>
+                        <li><a href="vision.html">Vision</a></li>
+                        <li><a href="mission.html">Mission</a></li>
+                        <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Journels</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="journels.html">Journels</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="search-icon">
@@ -165,13 +165,13 @@
             <h3 class="footer-title">Quick Links</h3>
             <p class="footer-text">From here you can search accademic programmes</p>
             <ul class="links">
-                <li><a href="">PhD</a></li>
-                <li><a href="">Masters</a></li>
-                <li><a href="">Bachelors</a></li>
-                <li><a href="">Deploma</a></li>
-                <li><a href="">Short Course</a></li>
-                <li><a href="">Workshop</a></li>
-                <li><a href="">Traning</a></li>
+                <li><a href="PhD.html">PhD</a></li>
+                <li><a href="masters.html">Masters</a></li>
+                <li><a href="bechelors.html">Bachelors</a></li>
+                <li><a href="diploma.html">Deploma</a></li>
+                <li><a href="shortcourse.html">Short Course</a></li>
+                <li><a href="workshop.html">Workshop</a></li>
+                <li><a href="traning.html">Traning</a></li>
             </ul>
         </div>
 
