--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Styles/patners.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
-    <title>USD | Patners</title>
+    <title>USD | Team</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
 </head>
 
@@ -77,106 +77,9 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Patner Section Start -->
-    <section class="patners-section">
-        <div class="patners-head">
-            <h3 class="patners-title">Our Offical Patners</h3>
-
-            <div class="patners">
-                <div class="patner">
-                    <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="patners-head">
-            <h3 class="patners-title">Our Academic Patners</h3>
-
-            <div class="patners">
-                <div class="patner">
-                    <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
-                </div>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="patners-head">
-            <h3 class="patners-title">Our Co Patners</h3>
-
-            <div class="patners">
-                <div class="patner">
-                    <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
-                </div>
-                <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Patner Section End -->
+    <!-- Activities Section Start -->
+    
+    <!-- Activities Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
