--- a/activities.html
+++ b/activities.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/activities.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Activities</title>
@@ -78,7 +78,41 @@
     </nav>
     <!-- Nav Bar End -->
     <!-- Activities Section Start -->
-    
+    <section class="activities">
+        <div class="activity">
+            <div class="images">
+                <img src="Assets/Images/Acitivites/pic.jpeg" alt="">
+            </div>
+            <div class="activities-box">
+                <div class="activities-box-title">Today's Event</div>
+                <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
+                    assumenda voluptates reprehenderit in eum minus et.</p>
+                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+            </div>
+        </div>
+        <div class="activity">
+            <div class="images">
+                <img src="Assets/Images/Acitivites/pic.jpeg" alt="">
+            </div>
+            <div class="activities-box">
+                <div class="activities-box-title">Today's Event</div>
+                <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
+                    assumenda voluptates reprehenderit in eum minus et.</p>
+                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+            </div>
+        </div>
+        <div class="activity">
+            <div class="images">
+                <img src="Assets/Images/Acitivites/pic.jpeg" alt="">
+            </div>
+            <div class="activities-box">
+                <div class="activities-box-title">Today's Event</div>
+                <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
+                    assumenda voluptates reprehenderit in eum minus et.</p>
+                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+            </div>
+        </div>
+    </section>
     <!-- Activities Section End -->
 
     <!-- FOOTER Start -->
