--- a/Activities/todaysevent.html
+++ b/Activities/todaysevent.html
@@ -79,7 +79,7 @@
     <!-- Nav Bar End -->
     <!-- Activities Section Start -->
     <section class="todaysactivities">
-        <a class="activities-btn" href="../activities.html">Back</a>
+        <a class="activities-btn" href="../activities.html"><i class="fas fa-arrow-left"></i> Back</a>
         <h3 class="todaysactivities-title">Today's Event</h3>
         <div class="images">
             <img src="../Assets/Images/Acitivites/pic.jpeg" alt="">
