--- a/index.html
+++ b/index.html
@@ -83,31 +83,31 @@
 
             <div class="slides fade">
                 <div class="slideNumber">1 / 5</div>
-                <img src="Assets/Images/Slider/pic3.jpg" style="width:100%">
+                <img src="Assets/Images/Slider/pic3.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Text</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">2 / 5</div>
-                <img src="Assets/Images/Slider/Pic2.jpg" style="width:100%">
+                <img src="Assets/Images/Slider/Pic2.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Two</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">3 / 5</div>
-                <img src="Assets/Images/Slider/pic.jpeg" style="width:100%">
+                <img src="Assets/Images/Slider/pic.jpeg" alt="" style="width:100%">
                 <div class="caption">Caption Three</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">4 / 5</div>
-                <img src="Assets/Images/Slider/pic4.jpg" style="width:100%">
+                <img src="Assets/Images/Slider/pic4.jpg" alt="" style="width:100%">
                 <div class="caption">Caption Four</div>
             </div>
 
             <div class="slides fade">
                 <div class="slideNumber">5 / 5</div>
-                <img src="Assets/Images/Slider/pic5.jpeg" style="width:100%">
+                <img src="Assets/Images/Slider/pic5.jpeg" alt="" style="width:100%">
                 <div class="caption">Caption Five</div>
             </div>
 
@@ -177,8 +177,11 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact Us</h3>
-            <li class="contact-info">Savar, Dhaka</li>
-            <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
+            <ul>
+                <li class="contact-info">Savar, Dhaka</li>
+                <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
+            </ul>
+
 
             <ul class="icons">
                 <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
