--- a/patners.html
+++ b/patners.html
@@ -84,28 +84,32 @@
 
             <div class="patners">
                 <div class="patner">
+                    <img src="Assets/Images/Patners/ugc.jpeg" alt="">
+                    <p class="patner-txt">UGC</p>
+                </div>
+                <div class="patner">
                     <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
+                    <p class="patner-txt">UNICEF</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
+                    <img src="Assets/Images/Patners/undp.jpeg" alt="">
+                    <p class="patner-txt">UNDP</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
+                    <img src="Assets/Images/Patners/unfpa.jpeg" alt="">
+                    <p class="patner-txt">UNFPA</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
+                    <img src="Assets/Images/Patners/unsdr.jpeg" alt="">
+                    <p class="patner-txt">UNSDR</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
+                    <img src="Assets/Images/Patners/cnrs.png" alt="">
+                    <p class="patner-txt">CNRS</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
+                    <img src="Assets/Images/Patners/ifrc.png" alt="">
+                    <p class="patner-txt">IFRC</p>
                 </div>
             </div>
         </div>
@@ -117,28 +121,32 @@
 
             <div class="patners">
                 <div class="patner">
+                    <img src="Assets/Images/Patners/ugc.jpeg" alt="">
+                    <p class="patner-txt">UGC</p>
+                </div>
+                <div class="patner">
                     <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
+                    <p class="patner-txt">UNICEF</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
+                    <img src="Assets/Images/Patners/undp.jpeg" alt="">
+                    <p class="patner-txt">UNDP</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
+                    <img src="Assets/Images/Patners/unfpa.jpeg" alt="">
+                    <p class="patner-txt">UNFPA</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
+                    <img src="Assets/Images/Patners/unsdr.jpeg" alt="">
+                    <p class="patner-txt">UNSDR</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
+                    <img src="Assets/Images/Patners/cnrs.png" alt="">
+                    <p class="patner-txt">CNRS</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
+                    <img src="Assets/Images/Patners/ifrc.png" alt="">
+                    <p class="patner-txt">IFRC</p>
                 </div>
             </div>
         </div>
@@ -150,28 +158,32 @@
 
             <div class="patners">
                 <div class="patner">
+                    <img src="Assets/Images/Patners/ugc.jpeg" alt="">
+                    <p class="patner-txt">UGC</p>
+                </div>
+                <div class="patner">
                     <img src="Assets/Images/Patners/unicef.png" alt="">
-                    <p class="patner-txt">Unicef</p>
+                    <p class="patner-txt">UNICEF</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/bkash.png" alt="">
-                    <p class="patner-txt">Bkash</p>
+                    <img src="Assets/Images/Patners/undp.jpeg" alt="">
+                    <p class="patner-txt">UNDP</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/nagad.png" alt="">
-                    <p class="patner-txt">Nagad</p>
+                    <img src="Assets/Images/Patners/unfpa.jpeg" alt="">
+                    <p class="patner-txt">UNFPA</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/pran.jpg" alt="">
-                    <p class="patner-txt">Pran</p>
+                    <img src="Assets/Images/Patners/unsdr.jpeg" alt="">
+                    <p class="patner-txt">UNSDR</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/rfl.png.crdownload" alt="">
-                    <p class="patner-txt">RFL</p>
+                    <img src="Assets/Images/Patners/cnrs.png" alt="">
+                    <p class="patner-txt">CNRS</p>
                 </div>
                 <div class="patner">
-                    <img src="Assets/Images/Patners/fc.jpeg" alt="">
-                    <p class="patner-txt">Faver Castell</p>
+                    <img src="Assets/Images/Patners/ifrc.png" alt="">
+                    <p class="patner-txt">IFRC</p>
                 </div>
             </div>
         </div>
@@ -210,8 +222,10 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact Us</h3>
-            <li class="contact-info">Savar, Dhaka</li>
-            <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
+            <ul>
+                <li class="contact-info">Savar, Dhaka</li>
+                <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
+            </ul>
 
             <ul class="icons">
                 <li><a href="tel:" target="_blank"><i class="fas fa-phone"></i></a></li>
