--- a/journals.html
+++ b/journals.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/journals.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
-    <title>USD | Journels</title>
+    <title>USD | Journals</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
 </head>
 
@@ -64,7 +64,7 @@
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="journels.html">Journels</a></li>
+                <li><a href="Journals.html">Journals</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -77,9 +77,20 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
-    
-    <!-- Activities Section End -->
+    <!-- Journal Section Start -->
+    <section class="journal"> 
+        <div class="img">
+            <img src="Assets/Images/Journal/ijkp.jpg" alt="">
+        </div>
+        <h3 class="journal-title">International Journal of Knowledge Platform (IJKP)</h3>
+
+        <h5 class="journal-heading">About the Journal:</h5>
+        <p class="journal-text">International Journal of Knowledge Platform (IJKP) is an independent, international, open access, bi-monthly, peer-reviewed general journal laid its foundation in 2021. It is committed to contributing to the translation of scientific knowledge into action through making available the research works of multiple disciplines conducted by the academicians, professionals, and the researchers from different parts of the world. Instrumentally, the published scientific works certainly bears the power of positive changes worldwide in a multi-dimensional way through unparalleled level of global reach and consequently, its impact propels the shape of human lives and the planet.</p>
+        <p class="journal-text">Notably, the IJKP accepts all the research works covering various disciplinary branches which has the vivid contribution to the knowledge world like Health Sciences, Social Sciences, Public Health, Religion, Environmental Science, Humanities, Technology, etc. 
+            For detailed info. Please visit the journal website.
+            </p>
+    </section>
+    <!-- Journal Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
