--- a/mission.html
+++ b/mission.html
@@ -64,7 +64,7 @@
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="journels.html">Journels</a></li>
+                <li><a href="Journals.html">Journals</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
