--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/contact.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Contact</title>
@@ -77,9 +77,38 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
-    
-    <!-- Activities Section End -->
+    <!-- Contact Section Start -->
+
+    <section class="contract">
+        <div class="contract-info">
+            <h2 class="contact-title">CONTACT INFO</h2>
+            <div><i class="fas fa-map-marker-alt"></i>Saver, Dhaka, BANGLADESH</div>
+            <div><i class="fas fa-envelope-square"></i>info@usd.edu</div>
+            <div><i class="fas fa-phone-square-alt"></i>01712345678</div>
+            <div><i class="fas fa-clock"></i>Sunday to Friday - 10AM TO 8PM</div>
+        </div>
+        <div class="contract-form">
+            <h2 class="contact-title">CONTACT US</h2>
+            <form class="contract-form-section" action="" method="post">
+                <input type="text" name="" class="text-box" placeholder="Name" required>
+                <input type="email" name="" class="text-box" placeholder="E-MAIL abc@mail.com" required>
+                <input type="text" name="" class="text-box" placeholder="Country of Residence" required>
+                <input type="text" name="" class="text-box" placeholder="WhatsApp (if you want to add)">
+                <select class="text-box" name="" id="">
+                    <option value="Select One">Select One...</option>
+                    <option value="Admission for Academic Programs ">Admission for Academic Programs </option>
+                    <option value="Career Opportunity">Career Opportunity</option>
+                    <option value="Research Publication">Research Publication </option>
+                    <option value="General Enquiry">General Enquiry</option>
+                    <option value="Other">Other</option>
+                </select>
+                <textarea name="" rows="5" placeholder="PLEASE ENTER YOUR MESSAGE HERE" required></textarea>
+                <input type="submit" name="submit" class="send-btn" value="Send">
+            </form>
+        </div>
+    </section>
+
+    <!-- Contact Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
