--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     </ul>
                 </li>
                 <li><a href="Journals.html">Journals</a></li>
+                <li><a href="journals.html">Ja</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
