--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="Journals.html">Journals</a></li>
-                <li><a href="journals.html">Ja</a></li>
+                <li><a href="journals.html">Journals</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
