--- a/journals.html
+++ b/journals.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="Styles/journals.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
-    <title>USD | Journals</title>
+    <title>USD | journals</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
 </head>
 
@@ -64,7 +64,7 @@
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="Journals.html">Journals</a></li>
+                <li><a href="journals.html">Journals</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
