--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                 <input type="text" name="" class="text-box" placeholder="Country of Residence" required>
                 <input type="text" name="" class="text-box" placeholder="WhatsApp (if you want to add)">
                 <select class="text-box" name="" id="">
-                    <option value="Select One">Select One...</option>
+                    <option value="">Subject</option>
                     <option value="Admission for Academic Programs ">Admission for Academic Programs </option>
                     <option value="Career Opportunity">Career Opportunity</option>
                     <option value="Research Publication">Research Publication </option>
