--- a/career.html
+++ b/career.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/career.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Career</title>
@@ -77,9 +77,36 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
-    
-    <!-- Activities Section End -->
+    <!-- Career Section Start -->
+    <section class="careers">
+        <div class="career">
+            <h1 class="career-title">Human Resource(HR)</h1>
+            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
+            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+        </div>
+        <div class="career">
+            <h1 class="career-title">Human Resource(HR)</h1>
+            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
+            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+        </div>
+        <div class="career">
+            <h1 class="career-title">Human Resource(HR)</h1>
+            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
+            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+        </div>
+        <div class="career">
+            <h1 class="career-title">Human Resource(HR)</h1>
+            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
+            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+        </div>
+        <div class="career">
+            <h1 class="career-title">Human Resource(HR)</h1>
+            <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
+            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+        </div>
+    </section>
+
+    <!-- Career Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
