--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
     <section class="contract">
         <div class="contract-info">
             <h2 class="contact-title">CONTACT INFO</h2>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545219799154!2d90.22635139107065!3d23.877326074803047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1679664212361!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div><i class="fas fa-map-marker-alt"></i>Saver, Dhaka, BANGLADESH</div>
             <div><i class="fas fa-envelope-square"></i>info@usd.edu</div>
             <div><i class="fas fa-phone-square-alt"></i>01712345678</div>
